syntax = "proto3";

package files;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wilson-kbs/cloudshare/services/files/modules/grpc/pb/files";

service FilesStore {
  rpc IsExist (ItemID) returns (google.protobuf.BoolValue) {}
  rpc Delete (ItemID) returns (google.protobuf.Empty) {}
  rpc GenerateFileFromCache (GenerateFile) returns (google.protobuf.Empty) {}
}

service CacheStore {
  rpc IsExist (ItemID) returns (google.protobuf.BoolValue) {}
  rpc Delete (ItemID) returns (google.protobuf.Empty) {}
  rpc GetMetadata (ItemID) returns (MetaFile) {}
}


message ItemID {
  string id = 1;
}


message GenerateFile {
  string cacheFileID = 1;
  string newFileID = 2;
}

message MetaFile {
  string name = 1;
  string type = 2;
  int64 size = 3;
  int64 lastModified = 4;
}